--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -27,6 +27,7 @@
         <file alias="export">res/icons/export.png</file>
         <file alias="synced">res/icons/synced.png</file>
         <file alias="remove">res/icons/remove.png</file>
+        <file alias="tx_crisp">res/icons/tx_crisp.png</file>
         <file alias="tx_mined">res/icons/tx_mined.png</file>
         <file alias="tx_input">res/icons/tx_input.png</file>
         <file alias="tx_output">res/icons/tx_output.png</file>
